--- a/src/index.css
+++ b/src/index.css
@@ -200,6 +200,20 @@ input[id=choice] {
   justify-content: space-between;
   width: 30%; /* The width is 60%, by default */
 }
+.video-responsive {
+  overflow: hidden;
+  padding-bottom: 56.25%;
+  position: relative;
+  height: 0;
+}
+
+.video-responsive iframe {
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
 /* 
 .right {
   background-color: #4CAF50;
