--- a/src/index.css
+++ b/src/index.css
@@ -214,6 +214,10 @@ input[id=choice] {
   width: 100%;
   position: absolute;
 }
+img {
+  width: 100%;
+  height: 100%;
+}
 /* 
 .right {
   background-color: #4CAF50;
